CI/CD alpha target dev

--- a/.github/workflows/ci-cd-alpha.yml
+++ b/.github/workflows/ci-cd-alpha.yml
@@ -17,7 +17,7 @@ jobs:
     name: CI/CD integration ps_facebook
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: contains(github.event.pull_request.labels.*.name, 'quality assurance needed') || github.ref == 'refs/heads/master'
+    if: contains(github.event.pull_request.labels.*.name, 'quality assurance needed') || github.ref == 'refs/heads/dev'
 
     steps:
       # Fixed babel build : https://github.com/ember-cli/ember-cli/issues/9235#issuecomment-635254959
