added new segment params

--- a/config/common/segment.yml
+++ b/config/common/segment.yml
@@ -4,3 +4,4 @@ services:
     arguments:
       - '@ps_facebook.context'
       - '@PrestaShop\Module\PrestashopFacebook\Config\Env'
+      - '@PrestaShop\Module\PrestashopFacebook\Adapter\ConfigurationAdapter'
